--- a/learn-nuxt-3/package.json
+++ b/learn-nuxt-3/package.json
@@ -22,10 +22,15 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.32.0",
     "nuxt": "^3.9.0",
+    "nuxt-quasar-ui": "^2.1.9",
     "prettier": "^3.4.2",
     "typescript": "^5.3.3",
     "vue": "^3.4.3",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.27"
+  },
+  "dependencies": {
+    "@quasar/extras": "^1.16.15",
+    "quasar": "^2.17.6"
   }
 }
