--- a/learn-nuxt-3/package.json
+++ b/learn-nuxt-3/package.json
@@ -31,7 +31,9 @@
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.9.0",
     "@quasar/extras": "^1.16.15",
+    "pinia": "^2.3.1",
     "quasar": "^2.17.6"
   }
 }
