--- a/learn-nuxt-3/package.json
+++ b/learn-nuxt-3/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "eslint": "^8.57.1",
@@ -31,7 +32,7 @@
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.9.0",
+    "@pinia/nuxt": "^0.5.0",
     "@quasar/extras": "^1.16.15",
     "pinia": "^2.3.1",
     "quasar": "^2.17.6"
