--- a/learn-nuxt-3/package.json
+++ b/learn-nuxt-3/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/i18n": "^9.2.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
@@ -27,7 +28,6 @@
     "prettier": "^3.4.2",
     "typescript": "^5.3.3",
     "vue": "^3.4.3",
-    "vue-i18n": "^11.0.1",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.27"
   },
