--- a/learn-nuxt-3/package.json
+++ b/learn-nuxt-3/package.json
@@ -18,6 +18,7 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
+    "@vueuse/nuxt": "^12.6.1",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-nuxt": "^4.0.0",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.0",
     "@quasar/extras": "^1.16.15",
+    "@vueuse/core": "^12.6.1",
     "pinia": "^2.3.1",
     "quasar": "^2.17.6"
   }
